# codecompass

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.github/scripts/: check_openspec_trace_gate.sh
.github/workflows/: ci.yml  release-e2e.yml  security.yml
benchmarks/retrieval/: README.md  run_retrieval_gate.sh
configs/: codecompassignore.example  default.toml
configs/mcp/: tool-schemas.json
crates/codecompass-cli/: Cargo.toml
crates/codecompass-core/: Cargo.toml
crates/codecompass-indexer/: Cargo.toml
crates/codecompass-mcp/: Cargo.toml
crates/codecompass-query/: Cargo.toml
crates/codecompass-state/: Cargo.toml
crates/codecompass-state/src/: branch_state.rs  db.rs  jobs.rs  lib.rs  manifest.rs  project.rs  schema.rs  symbols.rs  tantivy_index.rs  workspace.rs
docs/guides/: codex.md
docs/reference/: mcp-tools-schema.md
specs/001-core-mvp/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/002-agent-protocol/: plan.md  spec.md  tasks.md
specs/003-structure-nav/: plan.md  spec.md  tasks.md
specs/004-workspace-transport/: plan.md  spec.md  tasks.md
specs/005-vcs-core/: data-model.md  plan.md  spec.md  tasks.md
specs/006-vcs-ga-tooling/: plan.md  spec.md  tasks.md
specs/007-call-graph/: plan.md  spec.md  tasks.md
specs/008-semantic-hybrid/: plan.md  research.md  spec.md  tasks.md
specs/009-distribution/: plan.md  spec.md  tasks.md
specs/meta/: INDEX.md  benchmark-targets.md  design.md  development-guide.md  execution-order.md  migration-coverage.md  parallel-development-guardrails.md  roadmap.md  (+3 more)
(+111 files in other folders)
